@@ -2,80 +2,199 @@ package com.example.tattooartistbackend.user;
 
 import com.example.tattooartistbackend.address.Address;
 import com.example.tattooartistbackend.address.AddressRepository;
-import com.example.tattooartistbackend.exceptions.*;
+import com.example.tattooartistbackend.comment.CommentRepository;
+import com.example.tattooartistbackend.exceptions.AddressNotFoundException;
+import com.example.tattooartistbackend.exceptions.AlreadyDislikedException;
+import com.example.tattooartistbackend.exceptions.AlreadyLikedException;
+import com.example.tattooartistbackend.exceptions.TattooWorkNotFoundException;
+import com.example.tattooartistbackend.exceptions.UnderAgeException;
+import com.example.tattooartistbackend.exceptions.UserArtistPageNotFoundException;
+import com.example.tattooartistbackend.exceptions.UserNotFoundException;
 import com.example.tattooartistbackend.generated.models.ClientReqDto;
 import com.example.tattooartistbackend.generated.models.TattooArtistAccReqDto;
 import com.example.tattooartistbackend.generated.models.TattooArtistPriceInterval;
+import com.example.tattooartistbackend.generated.models.TattooWorksResponseDto;
 import com.example.tattooartistbackend.generated.models.UserResponseDto;
+import com.example.tattooartistbackend.generated.models.UserResponseDtoPageable;
 import com.example.tattooartistbackend.generated.models.UserUpdateRequestDto;
 import com.example.tattooartistbackend.review.Review;
 import com.example.tattooartistbackend.review.ReviewRepository;
 import com.example.tattooartistbackend.security.SecurityService;
 import com.example.tattooartistbackend.tattooWork.TattooWork;
 import com.example.tattooartistbackend.tattooWork.TattooWorkRepository;
+import com.example.tattooartistbackend.tattooWork.TattooWorkService;
+import com.example.tattooartistbackend.user.elasticsearch.UserDocument;
+import com.example.tattooartistbackend.user.elasticsearch.UserEsRepository;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
+import org.springframework.data.domain.PageRequest;
+import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
 
 import java.time.LocalDate;
+import java.util.ArrayList;
 import java.util.List;
 import java.util.Optional;
 import java.util.UUID;
+import java.util.regex.Pattern;
 import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
 @Slf4j
 public class UserService {
-
+    private final static Pattern UUID_REGEX_PATTERN =
+            Pattern.compile("^[{]?[0-9a-fA-F]{8}-([0-9a-fA-F]{4}-){3}[0-9a-fA-F]{12}[}]?$");
     private final UserRepository userRepository;
     private final AddressRepository addressRepository;
     private final TattooWorkRepository tattooWorkRepository;
+    private  final TattooWorkService tattooWorkService;
     private final ReviewRepository reviewRepository;
     private final SecurityService securityService;
+    private final CommentRepository commentRepository;
+    private final UserEsRepository userEsRepository;
 
     public UserResponseDto createUser(ClientReqDto clientReqDto) {
-        return userRepository.save(User.fromClientRequestDto(clientReqDto)).toUserResponseDto();
+        var user=userRepository.save(User.fromClientRequestDto(clientReqDto)).toUserResponseDto();
+        UserDocument userDocument=new UserDocument();
+        userDocument.setCity(user.getCity());
+        userDocument.setId(user.getId().toString());
+        userDocument.setFullName(user.getFirstName()+ " " +user.getLastName());
+        userDocument.setCountry(user.getCountry());
+        userDocument.setHasTattooArtistAcc(false);
+        userDocument.setAvatarUrl(user.getAvatarUrl());
+        userEsRepository.save(userDocument);
+        return user;
     }
 
-    public List<UserResponseDto> findAllUsers(String firstName, String lastName) {
-        return userRepository.findAllUsers(firstName, lastName)
-                .stream()
-                .map(User::toUserResponseDto)
-                .collect(Collectors.toList());
+    public UserResponseDtoPageable findAllUsers(Integer page, Integer size, String firstName, String lastName) {
+        Pageable pageable = PageRequest.of(page, size);
+         var list= userRepository.findAllCustom(firstName, lastName, pageable)
+                 .getContent()
+                 .stream()
+                 .map(User::toUserResponseDto).toList();
+        UserResponseDtoPageable userResponseDtoPageable= new UserResponseDtoPageable();
+        userResponseDtoPageable.setTattooArtists(list);
+        userResponseDtoPageable.setTotalElements((int) userRepository.findAllCustom(firstName, lastName, pageable).getTotalElements());
+        return  userResponseDtoPageable;
     }
 
-    public Optional<UserResponseDto> findUserById(UUID id) {
-        return Optional.of(userRepository.findById(id)
-                .map(User::toUserResponseDto)
-                .orElseThrow(UserNotFoundException::new));
+    public Optional<UserResponseDto> findUserById(String id) {
+        if (UUID_REGEX_PATTERN.matcher(id).matches()) {
+            return Optional.of(userRepository.findById(UUID.fromString(id))
+                    .map(User::toUserResponseDto)
+                    .orElseThrow(UserNotFoundException::new));
+        } else {
+            return Optional.of(userRepository.findByUid(id)
+                    .map(User::toUserResponseDto)
+                    .orElseThrow(UserNotFoundException::new));
+        }
     }
 
     public Optional<UserResponseDto> updateUser(UserUpdateRequestDto userUpdateRequestDto) {
         var authenticatedUser = securityService.getUser();
-        return Optional.ofNullable(userRepository.findById(authenticatedUser.getId())
-                .map(user -> {
-                    var givenReviews = reviewRepository.findAllByPostedBy_Id(user.getId());
-                    var takenReviews = reviewRepository.findAllByReceiver_Id(user.getId());
+        var userDocument= userEsRepository.findById(authenticatedUser.getId().toString()).orElseThrow(()-> new RuntimeException("userDocument not found!"));
 
-                    Address address = updateReqToAddress(user, userUpdateRequestDto.getCity(), userUpdateRequestDto.getState(),
-                            userUpdateRequestDto.getCountry(), userUpdateRequestDto.getPostalCode(), userUpdateRequestDto.getStreet(), userUpdateRequestDto.getOtherInformation());
-                    User userToUpdate = User.fromUserUpdateRequestDto(userUpdateRequestDto, address, user.getTattooWorks(),
-                            user.getTattooWorks(), user.getFavouriteArtists(), user.getComments(), takenReviews, givenReviews);
-                    userToUpdate.setId(user.getId());
-                    userToUpdate.setUid(user.getUid());
-                    userToUpdate.setHasArtistPage(user.isHasArtistPage());
-                    userToUpdate.setDateOfBirth(user.getDateOfBirth());
-                    userToUpdate.setAverageRating(user.getAverageRating());
-                    return userRepository.save(userToUpdate);
-                })
-                .map(User::toUserResponseDto)
-                .orElseThrow(UserNotFoundException::new));
+
+        if (authenticatedUser.isHasArtistPage()) {
+            return Optional.ofNullable(userRepository.findById(authenticatedUser.getId())
+                    .map(user -> {
+                        var givenReviews = reviewRepository.findAllByPostedBy_Id(user.getId());
+                        var takenReviews = reviewRepository.findAllByReceiver_Id(user.getId());
+
+                        Address address = updateReqToAddress(user, userUpdateRequestDto.getCity(), userUpdateRequestDto.getState(),
+                                userUpdateRequestDto.getCountry(), userUpdateRequestDto.getPostalCode(), userUpdateRequestDto.getStreet(), userUpdateRequestDto.getOtherInformation());
+                        User userToUpdate =
+                                User.fromUserUpdateRequestDto(userUpdateRequestDto,
+                                        address,
+                                        user.getFavoriteTattooWorks(),
+                                        user.getTattooWorks(),
+                                        user.getFavouriteArtists(),
+                                        user.getComments(),
+                                        takenReviews,
+                                        givenReviews);
+                        userToUpdate.setId(user.getId());
+                        userToUpdate.setEmail(user.getEmail());
+                        userToUpdate.setUid(user.getUid());
+                        userToUpdate.setHasArtistPage(user.isHasArtistPage());
+                        userToUpdate.setDateOfBirth(user.getDateOfBirth());
+                        userToUpdate.setAverageRating(user.getAverageRating());
+
+                        var updatedUser=userRepository.save(userToUpdate);
+
+                        userDocument.setCity(updatedUser.getBusinessAddress().getCity());
+                        userDocument.setId(updatedUser.getId().toString());
+                        userDocument.setFullName(updatedUser.getFirstName()+ " " +updatedUser.getLastName());
+                        userDocument.setCountry(updatedUser.getBusinessAddress().getCountry());
+                        userDocument.setHasTattooArtistAcc(true);
+                        userDocument.setAvatarUrl(updatedUser.getAvatarUrl());
+                        userEsRepository.save(userDocument);
+
+                        return updatedUser;
+                    })
+                    .map(User::toUserResponseDto)
+                    .orElseThrow(UserNotFoundException::new));
+        } else {
+            return Optional.ofNullable(userRepository.findById(authenticatedUser.getId())
+                    .map(user -> userRepository.save(user.fromBasicPatchRequest(userUpdateRequestDto)))
+                    .map(User::toUserResponseDto)
+                    .orElseThrow(UserNotFoundException::new));
+        }
+
     }
 
     public void deleteUser() {
         var authenticatedUser = securityService.getUser();
         var user = userRepository.findById(authenticatedUser.getId()).orElseThrow(UserNotFoundException::new);
+        //handle favorites
+        user.setFavoriteTattooWorks(null);
+        user.setFavouriteArtists(null);
+        user.setComments(null);
+        userRepository.save(user);
+
+        //handle people favorite me
+        List<User> toDOKendmiAra = userRepository.findAllByFavouriteArtistsIn(List.of(user));
+        for (User beniFavUser : toDOKendmiAra) {
+            var beniFavUserFavListi = beniFavUser.getFavouriteArtists();
+            beniFavUserFavListi.remove(user);
+            beniFavUser.setFavouriteArtists(beniFavUserFavListi);
+            userRepository.save(beniFavUser);
+        }
+
+        //handle own tatoo works
+        var listOfTattooWorks = user.getTattooWorks();
+        for (TattooWork listOfTattooWork : listOfTattooWorks) {
+            tattooWorkService.deleteTattooWork(listOfTattooWork.getId());
+        }
+
+        //handle tattoworks which we are client of
+        var tattooWorkList = tattooWorkRepository.findAllByClient_Id(user.getId());
+        tattooWorkList.forEach(tattooWork -> {
+            tattooWork.setClient(null);
+            tattooWork.setComment(null);
+            tattooWorkRepository.save(tattooWork);
+        });
+
+        //handle tattoo dislikes
+        var dislikedTattooWorks=tattooWorkRepository.findByDislikerIdsIn(List.of(user));
+        dislikedTattooWorks.forEach(tattooWork -> {
+            tattooWork.getDislikerIds().removeIf(user1 -> user1.getId()==user.getId());
+            tattooWork.getLikerIds().removeIf(user1 -> user1.getId()==user.getId());
+        });
+
+        //handle tattoo likes
+        var likedTattooWorks=tattooWorkRepository.findByLikerIdsIn(List.of(user));
+        likedTattooWorks.forEach(tattooWork -> {
+            tattooWork.getDislikerIds().removeIf(user1 -> user1.getId()==user.getId());
+            tattooWork.getLikerIds().removeIf(user1 -> user1.getId()==user.getId());
+        });
+
+
+        //get comments by postedby id and delete
+        var comment =commentRepository.findByPostedBy_Id(user.getId());
+        commentRepository.deleteById(comment.getId());
+
+        userEsRepository.deleteById(user.getId().toString());
         userRepository.deleteById(user.getId());
     }
 
@@ -134,22 +253,33 @@ public class UserService {
 
     public UserResponseDto createArtistAccount(TattooArtistAccReqDto tattooArtistAccReqDto) {
         var authenticatedUser = securityService.getUser();
+        var userDocument= userEsRepository.findById(authenticatedUser.getId().toString()).orElseThrow(()-> new RuntimeException("userDocument not found!"));
+        if (authenticatedUser.isHasArtistPage()) {
+            throw new RuntimeException("Client already have an Artist Account");
+        }
         return userRepository.findById(authenticatedUser.getId())
                 .map(user -> {
-                    if (LocalDate.now().getYear() - user.getDateOfBirth().getYear() < 18) {
+                    if (LocalDate.now().getYear() - tattooArtistAccReqDto.getDateOfBirth().getYear() < 18) {
                         throw new UnderAgeException();
                     }
                     var givenReviews = reviewRepository.findAllByPostedBy_Id(user.getId());
                     var takenReviews = reviewRepository.findAllByReceiver_Id(user.getId());
-                    Address address = getAddress(tattooArtistAccReqDto);
+                    Address address = updateAddress(tattooArtistAccReqDto);
                     User userToUpdate = getUserToUpdate(tattooArtistAccReqDto, user, givenReviews, takenReviews, address);
+
+                    userDocument.setCity(userToUpdate.getBusinessAddress().getCity());
+                    userDocument.setCountry(userToUpdate.getBusinessAddress().getCountry());
+                    userDocument.setHasTattooArtistAcc(true);
+                    userEsRepository.save(userDocument);
+                    System.out.println(userDocument);
+
                     return userRepository.save(userToUpdate);
                 })
                 .map(User::toUserResponseDto)
                 .orElseThrow(UserNotFoundException::new);
     }
 
-    private Address getAddress(TattooArtistAccReqDto tattooArtistAccReqDto) {
+    private Address updateAddress(TattooArtistAccReqDto tattooArtistAccReqDto) {
         Address address = Address.builder()
                 .otherInformation(tattooArtistAccReqDto.getOtherInformation())
                 .street(tattooArtistAccReqDto.getStreet())
@@ -177,12 +307,11 @@ public class UserService {
         userToUpdate.setEmail(user.getEmail());
         userToUpdate.setFirstName(user.getFirstName());
         userToUpdate.setLastName(user.getLastName());
-        userToUpdate.setDateOfBirth(user.getDateOfBirth());
         userToUpdate.setAvatarUrl(user.getAvatarUrl());
         return userToUpdate;
     }
 
-    private Address getAddress(User user, String city, String state, String country, String postalCode, String street, String otherInformation) {
+    private Address updateAddress(User user, String city, String state, String country, String postalCode, String street, String otherInformation) {
         if (!user.isHasArtistPage()) {
             throw new UserArtistPageNotFoundException();
         }
@@ -198,43 +327,38 @@ public class UserService {
     }
 
     private Address updateReqToAddress(User user, String city, String state, String country, String postalCode, String street, String otherInformation) {
-        return getAddress(user, city, state, country, postalCode, street, otherInformation);
+        return updateAddress(user, city, state, country, postalCode, street, otherInformation);
     }
 
     public void like(UUID postId) {
         var authenticatedUser = securityService.getUser();
-        var user = userRepository.findById(authenticatedUser.getId()).orElseThrow(UserNotFoundException::new);
         var tattooWork = tattooWorkRepository.findById(postId).orElseThrow(TattooWorkNotFoundException::new);
-
-        if (!tattooWork.getLikerIds().contains(authenticatedUser.getId())) {
-            if (tattooWork.getDislikerIds().contains(authenticatedUser.getId())) {
-                var tattooWorkDislikerIds = tattooWork.getDislikerIds();
-                tattooWorkDislikerIds.remove(authenticatedUser.getId());
+        if (!tattooWorkRepository.existsByLikerIdsContainsAndId(authenticatedUser, postId)) {
+            if (tattooWorkRepository.existsByDislikerIdsContainsAndId(authenticatedUser, postId)) {
+                var tattooWorkDislikerIds = new ArrayList<>(tattooWork.getDislikerIds());
+                tattooWorkDislikerIds.removeIf(user -> user.getId().equals(authenticatedUser.getId()));
                 tattooWork.setDislikerIds(tattooWorkDislikerIds);
-                tattooWorkRepository.save(tattooWork);
             }
             var tattooWorkLikerIds = tattooWork.getLikerIds();
-            tattooWorkLikerIds.add(authenticatedUser.getId());
+            tattooWorkLikerIds.add(authenticatedUser);
             tattooWork.setLikerIds(tattooWorkLikerIds);
             tattooWorkRepository.save(tattooWork);
         } else {
-            throw new AlreadyDislikedException();
+            throw new AlreadyLikedException();
         }
     }
 
     public void dislike(UUID postId) {
         var authenticatedUser = securityService.getUser();
-        var user = userRepository.findById(authenticatedUser.getId()).orElseThrow(UserNotFoundException::new);
         var tattooWork = tattooWorkRepository.findById(postId).orElseThrow(TattooWorkNotFoundException::new);
-        if (!tattooWork.getDislikerIds().contains(authenticatedUser.getId())) {
-            if (tattooWork.getLikerIds().contains(authenticatedUser.getId())) {
-                var tattooWorkLikerIds = tattooWork.getLikerIds();
-                tattooWorkLikerIds.remove(authenticatedUser.getId());
+        if (!tattooWorkRepository.existsByDislikerIdsContainsAndId(authenticatedUser, postId)) {
+            if (tattooWorkRepository.existsByLikerIdsContainsAndId(authenticatedUser, postId)) {
+                var tattooWorkLikerIds = new ArrayList<>(tattooWork.getLikerIds());
+                tattooWorkLikerIds.removeIf(user -> user.getId().equals(authenticatedUser.getId()));
                 tattooWork.setLikerIds(tattooWorkLikerIds);
-                tattooWorkRepository.save(tattooWork);
             }
             var tattooWorkDislikerIds = tattooWork.getDislikerIds();
-            tattooWorkDislikerIds.add(authenticatedUser.getId());
+            tattooWorkDislikerIds.add(authenticatedUser);
             tattooWork.setDislikerIds(tattooWorkDislikerIds);
             tattooWorkRepository.save(tattooWork);
         } else {
@@ -242,19 +366,68 @@ public class UserService {
         }
     }
 
-    public TattooArtistPriceInterval userPriceInterval(UUID id) {
-        userRepository.findById(id).orElseThrow(UserNotFoundException::new);
-        var tattooWorkMAX = tattooWorkRepository.findTopByMadeBy_IdOrderByConvertedPriceValueDesc(id).orElseThrow(TattooWorkNotFoundException::new);
-        var tattooWorkMIN = tattooWorkRepository.findTopByMadeBy_IdOrderByConvertedPriceValueAsc(id).orElseThrow(TattooWorkNotFoundException::new);
+    public TattooArtistPriceInterval userPriceInterval(String id) {
+        UserResponseDto user = null;
+        if (UUID_REGEX_PATTERN.matcher(id).matches()) {
+            user = userRepository.findById(UUID.fromString(id))
+                    .map(User::toUserResponseDto)
+                    .orElseThrow(UserNotFoundException::new);
+        } else {
+            user = userRepository.findByUid(id)
+                    .map(User::toUserResponseDto)
+                    .orElseThrow(UserNotFoundException::new);
+        }
+        var tattooWorkMAX = tattooWorkRepository.findTopByMadeBy_IdOrderByConvertedPriceValueDesc(user.getId()).orElse(null);
+        var tattooWorkMIN = tattooWorkRepository.findTopByMadeBy_IdOrderByConvertedPriceValueAsc(user.getId()).orElse(null);
         return createTattooArtistPriceInterval(tattooWorkMAX, tattooWorkMIN);
     }
 
     public TattooArtistPriceInterval createTattooArtistPriceInterval(TattooWork tattooWorkWithMaxPrice, TattooWork tattooWorkWithMinPrice) {
-        TattooArtistPriceInterval tattooArtistPriceInterval = new TattooArtistPriceInterval();
-        tattooArtistPriceInterval.setMaxTattooWorkPrice(tattooWorkWithMaxPrice.getPrice());
-        tattooArtistPriceInterval.setMinTattooWorkPrice(tattooWorkWithMinPrice.getPrice());
-        tattooArtistPriceInterval.setMaxTattooWorkPriceCurrency(tattooWorkWithMaxPrice.getCurrency());
-        tattooArtistPriceInterval.setMinTattooWorkPriceCurrency(tattooWorkWithMinPrice.getCurrency());
-        return tattooArtistPriceInterval;
+        if (tattooWorkWithMaxPrice == null || tattooWorkWithMinPrice == null) {
+            return null;
+        } else {
+            TattooArtistPriceInterval tattooArtistPriceInterval = new TattooArtistPriceInterval();
+            tattooArtistPriceInterval.setMaxTattooWorkPrice(tattooWorkWithMaxPrice.getPrice());
+            tattooArtistPriceInterval.setMinTattooWorkPrice(tattooWorkWithMinPrice.getPrice());
+            tattooArtistPriceInterval.setMaxTattooWorkPriceCurrency(tattooWorkWithMaxPrice.getCurrency());
+            tattooArtistPriceInterval.setMinTattooWorkPriceCurrency(tattooWorkWithMinPrice.getCurrency());
+            return tattooArtistPriceInterval;
+        }
+    }
+
+    public UserResponseDto getAuthenticatedUser() {
+        var user = securityService.getUser();
+        if (user == null) {
+            return null;
+        } else {
+            return user.toUserResponseDto();
+        }
+    }
+
+    public void deleteById(UUID id) {
+        var user = userRepository.findById(id).orElseThrow(UserNotFoundException::new);
+        commentRepository.deleteAll(user.getComments());
+        tattooWorkRepository.deleteAll(user.getTattooWorks());
+        reviewRepository.deleteAll(user.getTakenReviews());
+        var tattooWorkList = tattooWorkRepository.findAllByClient_Id(id);
+        tattooWorkList.forEach(tattooWork -> tattooWork.setClient(null));
+        userRepository.deleteById(id);
+    }
+
+    public List<TattooWorksResponseDto> getTattooWorks() {
+        return tattooWorkRepository.findAllByMadeBy_Id(securityService.getUser().getId()).stream().map(TattooWork::toTattooWorksResponseDto).collect(Collectors.toList());
+    }
+
+    //TODO pagination
+    public List<TattooWorksResponseDto> getFavoriteTattooWorks() {
+        var user = securityService.getUser();
+        var tattooWorkList = new ArrayList<>(user.getFavoriteTattooWorks());
+        return tattooWorkList.stream().map(TattooWork::toTattooWorksResponseDto).toList();
+    }
+
+    public List<UserResponseDto> getFavoriteTattooArtists() {
+        var user = securityService.getUser();
+        var favoriteTattooArtistList = new ArrayList<>(user.getFavouriteArtists());
+        return favoriteTattooArtistList.stream().map(User::toUserResponseDto).toList();
     }
 }
